chore: update job yaml (#119)
Signed-off-by: chenk <hen.keinan@gmail.com>

--- a/job.yaml
+++ b/job.yaml
@@ -53,11 +53,13 @@ spec:
       serviceAccountName: node-collector
       containers:
         - name: node-collector
-          image: ghcr.io/aquasecurity/node-collector:0.1.1
+          image: ghcr.io/aquasecurity/node-collector:0.2.0
           command:
             - node-collector
           args:
             - k8s
+            - --node
+            - kind-control-plane
           resources:
             limits:
               cpu: 100m
