feat: support config and spec version flags (#130)
* feat: support config and spec version flags

Signed-off-by: chenk <hen.keinan@gmail.com>

* feat: support config and spec version flags

Signed-off-by: chenk <hen.keinan@gmail.com>

* feat: support config and spec version flags

Signed-off-by: chenk <hen.keinan@gmail.com>

---------

Signed-off-by: chenk <hen.keinan@gmail.com>

--- a/pkg/collector/config/specs/k8s-cis-1.23.0.yaml
+++ b/pkg/collector/config/specs/k8s-cis-1.23.0.yaml
@@ -2,7 +2,7 @@
 version: "1.23.0"
 name: k8s-cis
 title: Node Specification for info collector
-collectors:
+commands:
   - key: kubeAPIServerSpecFilePermission
     title: API server pod specification file permissions
     nodeType: master
