--- a/pkg/collector/testdata/fixture/mapping.yaml
+++ b/pkg/collector/testdata/fixture/mapping.yaml
@@ -3,28 +3,35 @@ version_mapping:
   k8s:
     - op: ">="
       cluster_version: "1.21"
-      spec: k8s-cis-1.23.0
+      spec_name: k8s-cis
+      spec_version: "1.23.0"
   gke:
     - op: ">="
       cluster_version: "1.21"
-      spec: gke-cis-1.2.0
+      spec_name: gke-cis
+      spec_version: "1.2.0"
   eks:
     - op: ">="
       cluster_version: "1.21"
-      spec: eks-cis-1.2.0
+      spec_name: eks-cis
+      spec_version: "1.2.0"
   aks:
     - op: ">="
       cluster_version: "1.21"
-      spec: aks-cis-1.0.0
+      spec_name: aks-cis
+      spec_version: "1.0.0"
   rke2:
     - op: ">="
       cluster_version: "1.21"
-      spec: rke2-cis-1.24.0
+      spec_name: rke2-cis
+      spec_version: "1.24.0"
   microk8s:
     - op: ">="
       cluster_version: "1.21"
-      spec: microk8s-cis-1.24.0
+      spec_name: microk8s-cis
+      spec_version: "1.24.0"
   ocp:
     - op: ">="
       cluster_version: "4.0"
-      spec: rh-cis-1.0
+      spec_name: rh-cis
+      spec_version: "1.0"
