test: pass args dynamic to e2e (#134)
* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: chenk <hen.keinan@gmail.com>

* test: pass args dynamic to e2e

Signed-off-by: ch

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -146,6 +146,8 @@ jobs:
       - name: Run node-collector job
         run: >
 
+          go run ./tests/e2e/job-update.go
+
           kubectl apply -f ./tests/e2e/job.yaml
 
           kubectl wait --for=condition=Complete --timeout=30s job/node-collector
